--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -3,7 +3,11 @@ name: Scheduled Report Upload (5-Min Test)
 on:
   schedule:
     - cron: '*/5 * * * *'  # Runs every 5 minutes
-  workflow_dispatch:       # Allows manual testing in the Actions tab
+  workflow_dispatch:      # Allows manual testing in the Actions tab
+
+# This allows the keepalive-workflow to "poke" the repo to keep it active
+permissions:
+  contents: write
 
 jobs:
   run-upload:
@@ -15,7 +19,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10' # <--- UPGRADED FROM 3.9
+          python-version: '3.11' # Upgraded to 3.11 to avoid EOL warnings
 
       - name: Install Dependencies
         run: |
@@ -27,3 +31,10 @@ jobs:
           GDRIVE_FOLDER_ID: ${{ secrets.GDRIVE_FOLDER_ID }}
           DATA_EXCEL_FILE_ID: ${{ secrets.DATA_EXCEL_FILE_ID }}
         run: python automated_upload.py
+
+      # --- KEEP ALIVE LOGIC ---
+      # This resets the 60-day inactivity timer automatically
+      - name: Keepalive Workflow
+        uses: gautamkrishnar/keepalive-workflow@v1
+        with:
+          use_api: true
