--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -1,29 +1,29 @@
 name: Scheduled Report Upload (5-Min Test)
 
 on:
-  schedule:
-    - cron: '*/5 * * * *'  # Runs every 5 minutes
-  workflow_dispatch:       # Allows manual testing in the Actions tab
+  schedule:
+    - cron: '*/5 * * * *'  # Runs every 5 minutes
+  workflow_dispatch:      # Allows manual testing in the Actions tab
 
 jobs:
-  run-upload:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
+  run-upload:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10' # <--- UPGRADED FROM 3.9
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11' # Keeping 3.11 to avoid the EOL warning
 
-      - name: Install Dependencies
-        run: |
-          pip install -r requirements.txt
+      - name: Install Dependencies
+        run: |
+          pip install -r requirements.txt
 
-      - name: Execute Upload Script
-        env:
-          GDRIVE_SERVICE_ACCOUNT: ${{ secrets.GDRIVE_SERVICE_ACCOUNT }}
-          GDRIVE_FOLDER_ID: ${{ secrets.GDRIVE_FOLDER_ID }}
-          DATA_EXCEL_FILE_ID: ${{ secrets.DATA_EXCEL_FILE_ID }}
-        run: python automated_upload.py
+      - name: Execute Upload Script
+        env:
+          GDRIVE_SERVICE_ACCOUNT: ${{ secrets.GDRIVE_SERVICE_ACCOUNT }}
+          GDRIVE_FOLDER_ID: ${{ secrets.GDRIVE_FOLDER_ID }}
+          DATA_EXCEL_FILE_ID: ${{ secrets.DATA_EXCEL_FILE_ID }}
+        run: python automated_upload.py
