--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,6 +3,7 @@ enableCORS = false
 enableXsrfProtection = false
 # This ensures the server doesn't drop the PUT request mid-stream
 maxUploadSize = 100
+enableStaticServing = true
 
 [browser]
 # This reduces the number of background messages sent
